@@ -32,11 +32,6 @@
    eJxjYBhcYCmRarCpWwbFhACx6ogBABiCBIg=
   </data>
  </layer>
- <layer name="Higher" width="10" height="8">
-  <data encoding="base64" compression="zlib">
-   eJxjYCAd7AfiA0g0LnAeiC8g0bjAfSB+gEQPJQAAXPgJuw==
-  </data>
- </layer>
  <objectgroup name="Objects">
   <object id="1" name="test" x="32" y="64" width="16" height="24">
    <properties>
@@ -44,4 +39,9 @@
    </properties>
   </object>
  </objectgroup>
+ <layer name="Higher" width="10" height="8">
+  <data encoding="base64" compression="zlib">
+   eJxjYCAd7AfiA0g0LnAeiC8g0bjAfSB+gEQPJQAAXPgJuw==
+  </data>
+ </layer>
 </map>
